  * raggle: make encoding fall back to iso-8859-1 if it's not defined
    in the $config

* Fri Aug 22 21:56:00 2003, pabs <pabs@pablotron.org>
  * MANIFEST: updated

* Sun Aug 24 20:56:55 2003, pabs <pabs@pablotron.org>
  * raggle: add WEBrick-based web interface to Raggle.  to use it
    install WEBrick (http://www.webrick.org/, apt-get install
    libwebrick-ruby, whatever), "cp -a $PWD/extras/web_ui ~/.raggle/",
    run Raggle like "./raggle --server 2323", then point a web browser
    at http://localhost:2323/
  * README: added note about WEBrick requirement for web interface
  * added extras/web_ui (contains web interface tempates and images)

* Sun Aug 24 21:08:30 2003, pabs <pabs@pablotron.org>
  * removed extras/web_ui/inc/default.css

* Mon Aug 25 16:44:50 2003, pabs <pabs@pablotron.org>
  * raggle.pod: add --add to manpage (reported by sfire||mouse)

* Mon Aug 25 17:01:26 2003, pabs <pabs@pablotron.org>
  * extras/web_ui/inc/desc.css: removed extra junk
  * extras/web_ui/inc/feed_list.css: ditto
  * extras/web_ui/inc/titlebar.css: ditto

* Sun Aug 31 13:51:09 2003, pabs <pabs@pablotron.org>
  * raggle: added --ascii and $config['use_ascii_only?'] -- use
    ASCII borders instesad of ANSI ones.

* Sun Aug 31 14:38:04 2003, pabs <pabs@pablotron.org>
  * raggle: added add feed key binding.  currently has some caveats:
    ctrl-c makes it die horribly, it doesn't refresh the status bar
    after the update

* Sun Aug 31 14:45:52 2003, pabs <pabs@pablotron.org>
  * raggle: refresh statusb ar after adding feed from gui

* Mon Sep 01 00:50:07 2003, pabs <pabs@pablotron.org>
  * save feeds on SIGHUP, and SIGTERM as well (suggested by Omnic)

* Mon Sep 01 13:44:33 2003, pabs <pabs@pablotron.org>
  * TODO: minor update

* Mon Sep 01 13:46:00 2003, pabs <pabs@pablotron.org>
  * raggle: apply "Integer($1)" => "$1.to_i" suggested by Ville for
    the Yahoo News feed bug reported by "Nelson D. Guerrero"
    <raggle@nelsong.com>